<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cLayout"
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day1"
                android:background="#44ffffff"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myroutine_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day2"
                android:background="#44ffffff"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myroutine_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day3"
                android:background="#44ffffff"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myroutine_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day4"
                android:background="#44ffffff"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myroutine_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>