<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="70dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_recieve1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:text="@string/FirstDay"
                    android:textColor="@color/white"
                    android:scrollbars="vertical"/>

                <TextView
                    android:id="@+id/textview_day1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/day_textview_style"
                    android:gravity="center" />

                <Button
                    android:id="@+id/btn_day1"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/day_button_style"
                    android:text="@string/AddExercise"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_recieve2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:text="@string/SecondDay"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textview_day2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/day_textview_style"
                    android:gravity="center"
                    android:scrollbars="vertical"/>

                <Button
                    android:id="@+id/btn_day2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/day_button_style"
                    android:text="@string/AddExercise"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_recieve3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:text="@string/ThirdDay"
                    android:textColor="@color/white"
                    android:scrollbars="vertical"/>

                <TextView
                    android:id="@+id/textview_day3"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/day_textview_style"
                    android:gravity="center"
                    android:scrollbars="vertical"/>

                <Button
                    android:id="@+id/btn_day3"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/day_button_style"
                    android:text="@string/AddExercise"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_recieve4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:text="@string/FourthDay"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textview_day4"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/day_textview_style"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/btn_day4"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/day_button_style"
                    android:text="@string/AddExercise"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Complete" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>